v0.2 update working in db